--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@tanstack/react-query": "^5.25.0",
+    "@tanstack/react-query": "^5.27.5",
+    "dotenv": "^16.4.5",
     "next": "14.1.3",
     "react": "^18",
     "react-dom": "^18",
