--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^18",
     "sass": "^1.71.1",
     "sharp": "^0.33.2",
+    "sonner": "^1.4.3",
     "zod": "^3.22.4"
   },
   "devDependencies": {
