--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.4",
     "@tanstack/react-query": "^5.27.5",
     "dotenv": "^16.4.5",
     "next": "14.1.3",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.51.1",
     "sass": "^1.71.1",
     "sharp": "^0.33.2",
     "sonner": "^1.4.3",
