--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "sass": "^1.71.1",
     "sharp": "^0.33.2",
     "sonner": "^1.4.3",
+    "speak-tts": "^2.0.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
